[package]
name = "theblueskybotofalan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bisky = { git = "https://github.com/jesopo/bisky" }
chrono = "0.4.24"
clap = { version = "4.2.2", features = ["derive"] }
keyring = "2.0.2"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
